exception is no longer thrown